--- a/meltano.yml
+++ b/meltano.yml
@@ -10,10 +10,20 @@ plugins:
   - name: tap-google-sheets
     variant: matatika
     pip_url: git+https://github.com/Matatika/tap-google-sheets@v0.4.0
+  - name: tap-googleads
+    variant: matatika
+    pip_url: git+https://github.com/Matatika/tap-googleads@v0.4.0
+  - name: tap-govuk-weekly-road-fuel-prices
+    variant: matatika
+    pip_url: git+https://github.com/Matatika/tap-spreadsheets-anywhere@v0.2.0
   loaders:
   - name: target-postgres
     variant: matatika
     pip_url: git+https://github.com/Matatika/pipelinewise-target-postgres@v0.2.0
+  transforms:
+  - name: dbt-googleads
+    variant: matatika
+    pip_url: https://github.com/Matatika/dbt-tap-googleads@v0.4.0
   transformers:
   - name: dbt
     variant: dbt-labs
@@ -25,3 +35,13 @@ plugins:
   - name: analyze-dbt-models
     variant: matatika
     pip_url: git+https://github.com/Matatika/analyze-dbt-models@v0.2.0
+  - name: analyze-googleads
+    variant: matatika
+    pip_url: git+https://github.com/Matatika/analyze-googleads@v0.5.0
+  utilities:
+  - name: matatika
+    variant: matatika
+    pip_url: matatika~=1.16.0
+  - name: dbt-artifacts
+    variant: matatika
+    pip_url: git+https://github.com/Matatika/dbt-artifacts-ext.git
